--- a/style.css
+++ b/style.css
@@ -219,3 +219,39 @@
         width: 70vw;
     }
 }
+@media (max-width: 500px) {
+    .container-header {
+        height: 15vh;
+    }
+    .btn-left {
+        width: 32px;
+        height: 2px;
+    }
+    .btn-left:before {
+        width: 32px;
+        height: 2px;
+        top: -10px;
+    }
+    .btn-left:after {
+        width: 32px;
+        height: 2px;
+        top: 10px;
+    }
+    .box-left {
+        width: 100%;
+        height: 40vh;
+        justify-content: space-evenly;
+    }
+    .box-text {
+        width: 80vw;
+        height: 32vw;
+    }
+    .btn-action {
+        width: 45vw;
+        height: 6vh;
+        font-size: 2.1rem;
+    }
+    .image {
+        width: 80vw;
+    }
+}
